<resources>
    <string name="app_name">Heterogeneous Networks</string>
    <string name="system_manager_title">System Manager</string>
    <string name="network_manager_title">Network Manager</string>
    <string name="location_manager_title">Location Manager</string>
    <string name="policy_engine_title">Policy Engine</string>
    <string name="process_name">Name</string>
    <string name="pid">pid</string>
    <string name="uid">uid</string>
    <string name="tracking_gps_location">Tracking GPS Location</string>
    <string name="my_location">My Location</string>
    <string name="tracking_gyroscope">Tracking Gyroscope</string>
    <string name="package_title">Package</string>
    <string name="pid_title">PID</string>
    <string name="uid_title">UID</string>
    <string name="my_address">My Address</string>
    <string name="current_address">Current Address</string>
    <string name="add_policy_button_text">Add a Network Policy</string>
    <string name="event_title_text">Event :</string>
    <string name="policy_rule_vector_title">Policy Rule Vector:</string>
    <string name="current_state_vector_title">Current State Vector:</string>
    <string name="range_selector_title">Please choose a range</string>
    <string name="button_submit_text">Submit</string>
    <string name="name_title">Name</string>
    <string name="delvik_private_mem_title">Delvik Private Mem</string>
    <string name="delvik_shared_mem_title">Delvik Shared Mem</string>
    <string name="delvik_pss_title">Delvik PSS</string>
    <string name="native_private_title">Native Private</string>
    <string name="native_private_mem_title">Native Private Mem</string>
    <string name="native_pss_mem_title">Native PSS Mem</string>
    <string name="total_mem_title">Total Mem</string>
    <string name="policy_engine_button_text">GO TO POLICY ENGINE</string>
    <string name="policy_group_title">I want to add a</string>
    <string name="show_policy_options_text">GO</string>
    <string name="wifi_only_option_text">Connect only to WiFi</string>
    <string name="cellular_only_text">Connect only to Cellular 4G LTE/3G</string>
    <string name="policy_option_text">Policy</string>
    <string name="policy_option_text2">for</string>
    <string name="add_policy_button">Add Policy</string>
    <string name="application_types_text">Application Types</string>
    <string name="messaging">Messaging</string>
    <string name="video">Video</string>
    <string name="web_browser">Web Browser</string>
    <string name="banking">Banking</string>
    <string name="application">Application</string>
    <string name="youtube">YouTube</string>
    <string name="vudu">Vudu</string>
    <string name="google_chrome">Google Chrome</string>
    <string name="bank_of_america">Bank of America</string>
    <string name="policy_header">Policy</string>
    <string name="applied_to_header">Applied to</string>
    <string name="all_apps_text">All apps</string>
    <string name="video_banking_text">Video, Banking</string>
    <string-array name="policy_groups">
        <item>General Level Policy</item>
        <item>Application Type Level Policy</item>
        <item>Application Specific Policy</item>
    </string-array>
    <string name="app_description">NetGuard provides simple and advanced ways to block access to the internet - no root required. Applications and addresses can individually be allowed or denied access to your Wi-Fi and/or mobile connection.</string>
    <string name="app_copyright">Copyright \u00A9 2015–2017 by M. Bokhorst (M66B)</string>
    <string name="app_android">NetGuard requires Android 4.0 or later</string>
    <string name="app_license">By using NetGuard, you agree to the <a href="http://www.gnu.org/licenses/gpl.txt">GNU General Public License version 3</a></string>
    <string name="app_first">Great care has been taken to develop and test NetGuard,
however it is impossible to guarantee NetGuard will work correctly on every device.
\n\nBy using NetGuard, you agree to the <a href="http://www.gnu.org/licenses/gpl.txt">GNU General Public License version 3</a></string>
    <string name="app_admob">NetGuard uses Google\'s AdMob advertising service. AdMob\'s privacy policy is available <a href="https://www.google.com/intl/en/policies/privacy/">here</a>.</string>
    <string name="app_agree">I agree</string>
    <string name="app_disagree">I disagree</string>
    <string name="menu_search">Search for application</string>
    <string name="menu_filter">Filter applications</string>
    <string name="menu_app_user">Show user applications</string>
    <string name="menu_app_system">Show system applications</string>
    <string name="menu_app_nointernet">Show applications without internet</string>
    <string name="menu_app_disabled">Show disabled applications</string>
    <string name="menu_sort">Sort applications</string>
    <string name="menu_sort_name">Sort on name</string>
    <string name="menu_sort_uid">Sort on uid</string>
    <string name="menu_sort_data">Sort on data usage</string>
    <string name="menu_log">Show log</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_legend">Legend</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="menu_protocol_udp" translatable="false">UDP</string>
    <string name="menu_protocol_tcp" translatable="false">TCP</string>
    <string name="menu_protocol_other">Other</string>
    <string name="menu_traffic_allowed">Allowed</string>
    <string name="menu_traffic_blocked">Blocked</string>
    <string name="menu_live">Live updates</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_resolve">Show names</string>
    <string name="menu_organization">Show organization</string>
    <string name="menu_pcap_enabled">PCAP enabled</string>
    <string name="menu_pcap_export">PCAP export</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cleanup">Cleanup</string>
    <string name="title_protocol">Protocol</string>
    <string name="title_dport">Source port</string>
    <string name="title_raddr">Destination address</string>
    <string name="title_rport">Destination port</string>
    <string name="title_ruid">Destination application</string>
    <string name="title_external">For an external server select \'nobody\'</string>
    <string name="setting_defaults">Defaults (white/blacklist)</string>
    <string name="setting_whitelist_wifi">Block Wi-Fi</string>
    <string name="setting_whitelist_other">Block mobile</string>
    <string name="setting_screen_wifi">Allow Wi-Fi when screen on</string>
    <string name="setting_screen_other">Allow mobile when screen on</string>
    <string name="setting_whitelist_roaming">Block roaming</string>
    <string name="setting_options">Options</string>
    <string name="setting_theme">Theme: %1$s</string>
    <string name="setting_dark">Use dark theme</string>
    <string name="setting_install">Notify on new install</string>
    <string name="setting_screen_on">Apply \'when screen on\' rules</string>
    <string name="setting_auto">Auto enable after %1$s minutes</string>
    <string name="setting_delay">Delay screen off %1$s minutes</string>
    <string name="setting_update">Check for updates</string>
    <string name="setting_network_options">Network options</string>
    <string name="setting_subnet">Subnet routing</string>
    <string name="setting_tethering">Allow tethering</string>
    <string name="setting_lan">Allow LAN access</string>
    <string name="setting_ip6">Enable IPv6 traffic</string>
    <string name="setting_wifi_home">Wi-Fi home networks: %1$s</string>
    <string name="setting_metered">Handle metered Wi-Fi networks</string>
    <string name="setting_metered_2g">Consider 2G unmetered</string>
    <string name="setting_metered_3g">Consider 3G unmetered</string>
    <string name="setting_metered_4g">Consider LTE unmetered</string>
    <string name="setting_national_roaming">Ignore national roaming</string>
    <string name="setting_advanced_options">Advanced options</string>
    <string name="setting_system">Manage system applications</string>
    <string name="setting_log_app">Log internet access</string>
    <string name="setting_access">Notify on internet access</string>
    <string name="setting_filter">Filter traffic</string>
    <string name="setting_track_usage">Track network usage</string>
    <string name="setting_reset_usage">Reset network usage</string>
    <string name="setting_show_resolved">Show resolved domain names</string>
    <string name="setting_block_domains">Block domain names</string>
    <string name="setting_rcode">DNS response code: %s</string>
    <string name="setting_forwarding">Port forwarding</string>
    <string name="setting_vpn4">VPN IPv4: %s</string>
    <string name="setting_vpn6">VPN IPv6: %s</string>
    <string name="setting_dns">VPN DNS: %s</string>
    <string name="setting_ttl">Minimum DNS TTL: %s s</string>
    <string name="setting_socks5_enabled">Use SOCKS5 proxy</string>
    <string name="setting_socks5_addr">SOCKS5 address: %s</string>
    <string name="setting_socks5_port">SOCKS5 port: %s</string>
    <string name="setting_socks5_username">SOCKS5 username: %s</string>
    <string name="setting_socks5_password">SOCKS5 password: %s</string>
    <string name="setting_pcap_record_size">PCAP record size: %s B</string>
    <string name="setting_pcap_file_size">PCAP max. file size: %s MB</string>
    <string name="setting_watchdog">Watchdog: every %s minutes</string>
    <string name="setting_stats_category">Speed notification</string>
    <string name="setting_stats">Show speed notification</string>
    <string name="setting_stats_top">Show top applications</string>
    <string name="setting_stats_frequency">Sample interval: %s ms</string>
    <string name="setting_stats_samples">Number of samples: %s s</string>
    <string name="setting_backup">Backup</string>
    <string name="setting_export">Export settings</string>
    <string name="setting_import">Import settings</string>
    <string name="setting_hosts">Import hosts file</string>
    <string name="setting_hosts_url">Hosts file download URL</string>
    <string name="setting_hosts_download">Download hosts file</string>
    <string name="setting_technical">Technical information</string>
    <string name="setting_technical_general">General</string>
    <string name="setting_technical_networks">Networks</string>
    <string name="setting_technical_subscription">Subscriptions</string>
    <string name="summary_install">Show status bar notification to directly configure newly installed applications (pro feature)</string>
    <string name="summary_auto">After disabling using the widget, automatically enable NetGuard again after the selected number of minutes (enter zero to disable this option)</string>
    <string name="summary_delay">After turning the screen off, keep screen on rules active for the selected number of minutes (enter zero to disable this option)</string>
    <string name="summary_update">Check for new releases on GitHub twice daily</string>
    <string name="summary_tethering">Depending on the Android version, tethering may work or may not work. Tethered traffic cannot be filtered.</string>
    <string name="summary_subnet">Enable subnet routing; might enable Wi-Fi calling, but might also trigger bugs in Android and increase battery usage</string>
    <string name="summary_lan">Allow applications to connect to local area network addresses, like 10.0.0.0/8, 172.16.0.0/12 and 192.168.0.0/16</string>
    <string name="summary_ip6">Route IP version 6 traffic to NetGuard so it can selectively be allowed or blocked</string>
</resources>